<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".SettingsContentFragment">

        <TextView
            android:id="@+id/settingsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_settings"
            android:textColor="#8e8c8c"
            android:textSize="@dimen/profile_text_dimens"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/dailyMatchTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_match_reminder_time"/>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <TextView
            android:id="@+id/distanceFromUserTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_distance_away_in_miles" />

        <EditText
            android:id="@+id/maxDistanceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_distance_from_location" />

        <EditText
            android:id="@+id/genderEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_profile" />

            <RadioButton
                android:id="@+id/radio_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_profile" />
        </RadioGroup>

        <TextView
            android:id="@+id/ageRangeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_range" />

        <EditText
            android:id="@+id/minAgeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minimum_age" />

        <EditText
            android:id="@+id/maxAgeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maximum_age" />

        <Button
            android:id="@+id/settings_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_settings"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>
</ScrollView>