<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/hello_dimens"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/profile_text_dimens"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/hello_dimens"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/benedict" />

        <Button
            android:id="@+id/return_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePic"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:onClick="goToMain"
            android:text="@string/return_to_signup" />
    </RelativeLayout>
</ScrollView>